--- a/ExtraUIScreens/ExtraUIScreens.csproj
+++ b/ExtraUIScreens/ExtraUIScreens.csproj
@@ -115,23 +115,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EUISModData.cs" />
-    <Compile Include="ExtraUIScreensMod.cs" />
-    <Compile Include="EUISScreenManager.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Redirector\MenuUISystemOverrides.cs" />
-    <Compile Include="Utils\BasicIMod.cs" />
-    <Compile Include="Utils\BridgeUtils.cs" />
-    <Compile Include="Utils\IBasicModData.cs" />
-    <Compile Include="Utils\KFileUtils.cs" />
-    <Compile Include="Utils\KResourceLoader.cs" />
-    <Compile Include="Utils\LogUtils.cs" />
-    <Compile Include="Utils\OptionsUISystemRedirector.cs" />
-    <Compile Include="Utils\Redirector.cs" />
-    <Compile Include="Utils\ReflectionUtils.cs" />
-    <Compile Include="Utils\Tuple.cs" />
-    <Compile Include="Utils\Wrapper.cs" />
-    <Compile Include="Utils\XmlUtils.cs" />
+    <Compile Include="**\*.cs" Exclude="obj\**\*.cs"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\K45EUIS_Ext\K45EUIS_Ext.csproj">
