Fixing subscription system for events and calls Added support to RawValueBinding subscriptions

--- a/K45EUIS_Ext/K45EUIS_Ext.csproj
+++ b/K45EUIS_Ext/K45EUIS_Ext.csproj
@@ -33,6 +33,11 @@
     <Compile Include="IEUISAppRegister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Colossal.UI.Binding">
+      <HintPath>..\..\_Managed DLLs\Colossal.UI.Binding.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
