--- a/UI/package.json
+++ b/UI/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@k45-euis/root-config",
   "scripts": {
-    "start": "webpack serve --port 9000 --env isLocal",
+    "start": "webpack serve --port 8400 --env isLocal",
     "lint": "eslint src --ext js,ts,tsx",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "format": "prettier --write .",
@@ -30,6 +30,8 @@
     "jest-cli": "^27.0.6",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "serve": "^12.0.0",
     "ts-config-single-spa": "^3.0.0",
     "typescript": "^4.3.5",
@@ -43,6 +45,7 @@
     "@types/jest": "^27.0.1",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.24",
     "postcss-prefix-selector": "^1.16.0",
     "single-spa": "^5.9.3"
