--- a/K45EUIS_Ext/K45EUIS_Ext.csproj
+++ b/K45EUIS_Ext/K45EUIS_Ext.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="IEUISAppRegister.cs" />
+    <Compile Include="IEUISModRegister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
