--- a/ExtraUIScreens/ExtraUIScreens.csproj
+++ b/ExtraUIScreens/ExtraUIScreens.csproj
@@ -3,44 +3,86 @@
 	<PropertyGroup>
 		<TargetFramework>net480</TargetFramework>
 		<RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
-		<Configurations>Steam;Editor</Configurations>
+		<Configurations>Steam;Editor;Thunderstore</Configurations>
    	<UnityVersion>2022.3.7f1</UnityVersion>
 		<EntityVersion>1.0.16</EntityVersion>
+    <RootNamespace>ExtraUIScreens</RootNamespace>
 		<InstallationPath>C:\Program Files (x86)\Steam\steamapps\common\Cities Skylines II</InstallationPath>
 		<DataPath>$(LOCALAPPDATA)\..\LocalLow\Colossal Order\Cities Skylines II</DataPath>
-    <Version>0.0.7.0</Version>
+    <Version>0.0.7.1</Version>
+    <ThunderstoreVersion>0.0.7</ThunderstoreVersion> 
+    <PublishTrimmed>True</PublishTrimmed>
+    <ThunderstoreDesc>Add support to more monitors for UI in the game, also add tools to add UI applications.</ThunderstoreDesc>
 		<UnityModProjectPath Condition="'$(Configuration)'=='Editor'">$(ProjectDir)..\..\UnityModsProject</UnityModProjectPath>
 		<UnityModProjectPath Condition="'$(Configuration)'=='Steam'">$(DataPath)\~Tooling~\UnityModsProject</UnityModProjectPath>
 
 		<ModPostProcessorPath Condition="'$(Configuration)'=='Editor'">$(ProjectDir)..\..\..\..\BeverlyHills\Assets\StreamingAssets\~Tooling~\ModPostProcessor\ModPostProcessor.exe</ModPostProcessorPath>
 		<ModPostProcessorPath Condition="'$(Configuration)'=='Steam'">$(InstallationPath)\Cities2_Data\StreamingAssets\~Tooling~\ModPostProcessor\ModPostProcessor.exe</ModPostProcessorPath>
-		
+    
+    
 		<ManagedDLLPathEditor>..\..\..\..\BeverlyHills\Library\ScriptAssemblies</ManagedDLLPathEditor>
 		<ManagedDLLPathSteam>$(K45_CS2_ALLROOT)\_Managed DLLs</ManagedDLLPathSteam>
 		<UnityEnginePath>C:\Program Files\Unity\Hub\Editor\$(UnityVersion)\Editor\Data\Managed\UnityEngine</UnityEnginePath>
-		
+	
 		<AssemblySearchPaths Condition="'$(Configuration)'=='Editor'">
 			$(AssemblySearchPaths);
 			$(ManagedDLLPathEditor);
 			$(UnityEnginePath);
 		</AssemblySearchPaths>
-		<AssemblySearchPaths Condition="'$(Configuration)'=='Steam'">
-			$(AssemblySearchPaths);
-			$(ManagedDLLPathSteam);
-		</AssemblySearchPaths>
+    <AssemblySearchPaths Condition="'$(Configuration)'=='Steam'">
+      $(AssemblySearchPaths);
+      $(ManagedDLLPathSteam);
+    </AssemblySearchPaths>
 		<LangVersion>10.0</LangVersion>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
+<Target Name="ClearReferenceCopyLocalPaths" AfterTargets="ResolveAssemblyReferences"  Condition="'$(Configuration)'=='Thunderstore'">
+    <ItemGroup>
+      <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" />
+    </ItemGroup>
+  </Target>
+  
 
 	<ItemGroup>
 		<Compile Remove="Logs\**" />
 		<EmbeddedResource Remove="Logs\**" />
 		<None Remove="Logs\**" />
 	</ItemGroup>
-  
+  <PropertyGroup Condition="'$(Configuration)'=='Thunderstore'">
+    <RestoreAdditionalProjectSources>
+      https://api.nuget.org/v3/index.json;
+      https://nuget.bepinex.dev/v3/index.json;
+      https://nuget.samboy.dev/v3/index.json
+    </RestoreAdditionalProjectSources>
+    <BepInExVersion>5</BepInExVersion>
+    <DefineConstants>$(DefineConstants);THUNDERSTORE</DefineConstants>
+    <AssemblySearchPaths>
+      $(AssemblySearchPaths);
+      $(ManagedDLLPathSteam);
+    </AssemblySearchPaths>
+  </PropertyGroup>
+ 
+
+  <ItemGroup Condition="'$(Configuration)'=='Thunderstore'">
+    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
+    <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
+    <PackageReference Include="HarmonyX" Version="2.10.2" />    
+  </ItemGroup>
+
+
+  <ItemGroup Condition="'$(BepInExVersion)' == '6' AND '$(Configuration)'=='Thunderstore'"> 
+    <PackageReference Include="BepInEx.Unity.Mono" Version="6.0.0-be.*" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(BepInExVersion)' == '5' AND '$(Configuration)'=='Thunderstore'">
+    <PackageReference Include="BepInEx.Core" Version="5.*" IncludeAssets="compile" />
+  </ItemGroup>
+
+  <PropertyGroup Condition="'$(BepInExVersion)' == '6' AND '$(Configuration)'=='Thunderstore'">
+    <DefineConstants>$(DefineConstants);BEPINEX_V6</DefineConstants>
+  </PropertyGroup>
 	<ItemGroup>
-	
-    <Reference Include="0Harmony">
+    <Reference Include="0Harmony" Condition="'$(Configuration)'!='Thunderstore'">
       <HintPath>$(K45_CS2_ALLROOT)\_commonDeps\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.ImageConversionModule.dll">
@@ -159,7 +201,7 @@
 	</ItemGroup>
 
   
-	<ItemGroup>
+	<ItemGroup Condition="'$(Configuration)'!='Thunderstore'">
 		<Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.SystemAPI.dll" />
 		<Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.dll" />
 		<Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.SystemAPI.QueryBuilder.dll" />
@@ -174,15 +216,18 @@
 		<Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.JobEntityGenerator.dll" />
 	</ItemGroup>
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-		<RemoveDir Directories="$(OutDir)" /> 
+		<RemoveDir Directories="$(OutDir)" />
 	</Target>
+  <ItemGroup>
+    <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='Thunderstore'" />
+    <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='Thunderstore'" />
+  </ItemGroup>
 	<Target Name="PostBuild" AfterTargets="AfterBuild">
 
 
         <ItemGroup>
           <FilesToCopy Include="$(OutDir)\**\*.*" Exclude="*.pdb" />
-          <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" />
-        </ItemGroup>
+        </ItemGroup> 
     
         <!--<Message Condition="Exists('$(ModPostProcessorPath)')" Text="Run post processor: $(ModPostProcessorPath) $(TargetPath) $(ProjectPath) $(UnityModProjectPath)" Importance="high" />
 		    <Message Condition="!Exists('$(ModPostProcessorPath)')" Text="Post processor was not found, please check the path: $(ModPostProcessorPath)" Importance="high" />
@@ -191,6 +236,30 @@
 		<Message Text="Copy output to deploy dir @(DeployDir)" Importance="high" />
 		<Copy SourceFiles="@(FilesToCopy)" DestinationFolder="@(DeployDir)" />
 	</Target>
+  <Target Name="Tunderstore" AfterTargets="PostBuild" Condition="'$(Configuration)'=='Thunderstore'">
+
+    <ItemGroup>
+      <BasicFileTunderstoreLocation Include="$(SolutionDir)\_Thunderstore\*.*" />
+    </ItemGroup>
+    <Message Text="Copy Thunderstorm files to deploy dir @(DeployDir)" Importance="high" />
+    <Copy SourceFiles="@(BasicFileTunderstoreLocation)" DestinationFolder="@(DeployDir)" />
+
+    <PropertyGroup>
+      <ManifestContent>
+        {
+        "name": "$(RootNamespace)",
+        "version_number": "$(ThunderstoreVersion)",
+        "website_url": "",
+        "description": "$(ThunderstoreDesc)",
+        "dependencies": [
+        "BepInEx-BepInExPack-5.4.2100"
+        ]
+        }</ManifestContent>
+      <ManifestLocation>$([System.IO.Path]::GetDirectoryName('%(BasicFileTunderstoreLocation.Identity)'))\manifest.json</ManifestLocation>
+    </PropertyGroup>
+
+    <WriteLinesToFile File="$(ManifestLocation)" Overwrite="true" Lines="$(ManifestContent)" />
+  </Target>
 	<ItemGroup>
 	  <None Update="i18n\i18n.csv">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -236,10 +305,24 @@
 			<Private>false</Private>
 		</Reference>
 	</ItemGroup>
-	<ItemGroup>
-		<Reference Update="System.Xml.Linq">
-			<Private>false</Private>
-		</Reference>
-	</ItemGroup>
+  <ItemGroup>
+    <Reference Update="System.Xml.Linq">
+      <Private>false</Private>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup  Condition="'$(Configuration)'=='Thunderstore'">
+    <Reference Update="Mono.Cecil*">
+      <Private>false</Private>
+    </Reference>
+    <Reference Update="Mono.Cecil.*">
+      <Private>false</Private>
+    </Reference>
+    <Reference Update="MonoMod.*">
+      <Private>false</Private>
+    </Reference>
+    <Reference Update="0Harmony*">
+      <Private>false</Private>
+    </Reference>
+  </ItemGroup>
 
 </Project>
