--- a/_Frontends/_Frontends.csproj
+++ b/_Frontends/_Frontends.csproj
@@ -2,11 +2,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
    	<TargetFramework>net480</TargetFramework>
-     <DeployBaseFolder>$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)\UI</DeployBaseFolder>
+     <DeployBaseFolder Condition="'$(Configuration)'!='Thunderstore'">$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)\UI</DeployBaseFolder>
+     <DeployBaseFolder Condition="'$(Configuration)'=='Thunderstore'">$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName)\UI</DeployBaseFolder>
      <SourceBaseFolder>$(SolutionDir)UI</SourceBaseFolder>
+     <Configurations>Editor;Steam;Thunderstore</Configurations>
    </PropertyGroup>
 	<ItemGroup>
-    <Frontend Include="$(SourceBaseFolder)\*\package.json" >
+    <Frontend Include="$(SourceBaseFolder)\*\package.json">
       <Project>$(MSBuildProjectFullPath)</Project>
     </Frontend>
     <Images Include="$(SourceBaseFolder)\images\**\*.*" />
@@ -17,22 +19,19 @@
   </Target>
 
   <Target AfterTargets="AfterBuild" Name="IterateFrontends" Inputs="@(Frontend)" Outputs="%(Identity).bogus">
-    <MSBuild Projects ="%(Frontend.Project)"
-           Properties="FrontendDir=$([System.IO.Path]::GetDirectoryName('%(Frontend.Identity)'));Environment=$(Environment)"
-           Targets="PostBuild"/>
+    <MSBuild Projects="%(Frontend.Project)" Properties="FrontendDir=$([System.IO.Path]::GetDirectoryName('%(Frontend.Identity)'));Environment=$(Environment)" Targets="PostBuild" />
   </Target>
   
   <Target Name="PostBuild">
         <Message Text="Building project at dir $(FrontendDir)" Importance="high" />
         <Exec WorkingDirectory="$(FrontendDir)" Command="npm run build:webpack" ContinueOnError="false" />
-        <ReadLinesFromFile File="$(FrontendDir)\outputFolder.txt"><Output TaskParameter="Lines" ItemName="OutputFolder"/></ReadLinesFromFile>
+        <ReadLinesFromFile File="$(FrontendDir)\outputFolder.txt"><Output TaskParameter="Lines" ItemName="OutputFolder" /></ReadLinesFromFile>
         <ItemGroup>
           <SourceFeMain Include="$(FrontendDir)\dist\**\*.*" />
         </ItemGroup>
         <PropertyGroup>
           <OutputFolder>%(OutputFolder.Identity)</OutputFolder>
         </PropertyGroup>
-        <Copy SourceFiles="@(SourceFeMain)" DestinationFiles="$(DeployBaseFolder)\$(OutputFolder)\%(SourceFeMain.RecursiveDir)\%(SourceFeMain.Filename)%(SourceFeMain.Extension)"
-              ContinueOnError="false"/>
+        <Copy SourceFiles="@(SourceFeMain)" DestinationFiles="$(DeployBaseFolder)\$(OutputFolder)\%(SourceFeMain.RecursiveDir)\%(SourceFeMain.Filename)%(SourceFeMain.Extension)" ContinueOnError="false" />
   </Target>
 </Project> 
