--- a/ExtraUIScreens/ExtraUIScreens.csproj
+++ b/ExtraUIScreens/ExtraUIScreens.csproj
@@ -64,9 +64,15 @@
  
 
   <ItemGroup Condition="'$(Configuration)'=='Thunderstore'">
-    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
-    <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
-    <PackageReference Include="HarmonyX" Version="2.10.2" />    
+    <PackageReference Include="BepInEx.Analyzers" Version="1.*">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="HarmonyX" Version="2.10.2" PrivateAssets="all">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>    
   </ItemGroup>
 
 
